--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
-<html>
-</html>
+<div class="progress">
+  <div class="progress-bar" role="progressbar" aria-valuenow="60"
+   aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+<span class="sr-only">60% Complete</span>    
+  </div>
+</div>
