--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
+<html>
+<title></title>
+<body>
 <div class="progress">
   <div class="progress-bar" role="progressbar" aria-valuenow="60"
    aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-<span class="sr-only">60% Complete</span>    
+<span class="sr-only">60% Complete</span>
   </div>
 </div>
+</body>
+</html>
